--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,38 +1,6 @@
 <div class="container-fluid">
-  <header class="jumbotron p-3 mt-3">
-    <h1>Shopping Cart</h1>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light mt-3">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a href="#" class="nav-link">My Shopping Cart</a>
-        </li>
-        <li class="nav-item">
-          <a href="#" class="nav-link">About</a>
-        </li>
-      </ul>
-    </nav>
-  </header>
+  <app-header></app-header>
   <div class="content">    
-      <form>
-          <div class="input-group mt-3">
-            <input type="text" class="form-control" placeholder="Item name">
-            <button type="submit" class="btn btn-primary">Add</button>
-        </div>
-      </form>
-
-      <br>
-
-      <ul class="list-group">
-        <li class="list-group-item">
-          <span>Bread</span>
-          <span class="float-right">
-            <span class="badge badge-danger">X</span>
-          </span>
-        </li>
-
-        <li class="list-group-item disabled">
-          <span>Cookies</span>
-        </li>
-      </ul>
+    <app-shopping-list></app-shopping-list>
   </div>
 </div>
