--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -8,13 +8,12 @@
 <br>
 
 <ul class="list-group">
-  <li class="list-group-item">
-    <span>Bread</span>
-    <span class="float-right">
-      <span class="badge badge-danger">X</span>
-    </span>
-  </li>
 
+  <!-- Toda diretiva estrutural tem * -->
+  <app-shopping-list-item 
+      *ngFor="let item of listItems"
+      [item]="item">
+  </app-shopping-list-item>
   <li class="list-group-item disabled">
     <span>Cookies</span>
   </li>
