Creation of shopping list item / @Input annotation / Loop logic

--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -8,14 +8,10 @@
 <br>
 
 <ul class="list-group">
-  <li class="list-group-item">
-    <span>Bread</span>
-    <span class="float-right">
-      <span class="badge badge-danger">X</span>
-    </span>
-  </li>
 
-  <li class="list-group-item disabled">
-    <span>Cookies</span>
-  </li>
+  <!-- Toda diretiva estrutural tem * -->
+  <app-shopping-list-item 
+      *ngFor="let item of listItems"
+      [shoppingItem]="item">
+  </app-shopping-list-item>  
 </ul>
