Creation of Shopping List Service / CRUD methods

--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -11,7 +11,7 @@
 
   <!-- Toda diretiva estrutural tem * -->
   <app-shopping-list-item 
-      *ngFor="let item of listItems"
+      *ngFor="let item of list"
       [shoppingItem]="item">
   </app-shopping-list-item>  
 </ul>
