--- a/src/app/shopping-list/shopping-list-item/shopping-list-item.component.html
+++ b/src/app/shopping-list/shopping-list-item/shopping-list-item.component.html
@@ -1,6 +1,11 @@
 <li class="list-group-item" [ngClass]="{ 'disabled' : listItem.disabled }">
   <span>{{ listItem.name }}</span>
   <span class="float-right" *ngIf="!listItem.disabled">
-    <span class="badge badge-danger">X</span>
+    <span 
+        class="badge badge-danger" 
+        (click)="myShoppingListService.remove(listItem)">X</span>
+      <span 
+        class="badge badge-success" 
+        (click)="myShoppingListService.cross(listItem)">X</span>
   </span>
 </li>
