--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
   <app-header></app-header>
   <div class="content">    
-    <app-shopping-list></app-shopping-list>
+    <router-outlet></router-outlet>
   </div>
 </div>
