--- a/src/app/shopping-list/shopping-list-item/shopping-list-item.component.html
+++ b/src/app/shopping-list/shopping-list-item/shopping-list-item.component.html
@@ -8,6 +8,6 @@
         (click)="removeItem()">X</span>
       <span 
         class="badge badge-success" 
-        (click)="myShoppingListService.cross(listItem)">&radic;</span>
+        (click)="crossItem(listItem)">&radic;</span>
   </span>
 </li>
