--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -13,7 +13,7 @@
 
   <!-- Toda diretiva estrutural tem * -->
   <app-shopping-list-item 
-      *ngFor="let item of list"
+      *ngFor="let item of list | async"
       [shoppingItem]="item">
   </app-shopping-list-item>  
 </ul>
