--- a/src/app/shopping-list/shopping-list-item/shopping-list-item.component.html
+++ b/src/app/shopping-list/shopping-list-item/shopping-list-item.component.html
@@ -3,11 +3,11 @@
     [ngClass]="{ 'disabled' : listItem.disabled }">
   <span>{{ listItem.name }}</span>
   <span class="float-right" *ngIf="!listItem.disabled">
-    <span 
-        class="badge badge-danger" 
-        (click)="removeItem()">X</span>
-      <span 
-        class="badge badge-success" 
-        (click)="crossItem(listItem)">&radic;</span>
+    <span class="badge badge-danger"(click)="removeItem()">
+      <fa name="fas fa-times-circle"></fa>
+    </span>
+      <span class="badge badge-success" (click)="crossItem(listItem)">
+        <fa name="far fa-check"></fa>
+      </span>
   </span>
 </li>
