--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,8 +4,15 @@
     else showLogin: caso de errado, ele faz isso. E o showLogin vai mostrar o template
    -->
   <div *ngIf="authService.afAuth.authState | async as user; else showLogin">
-    <p>Hi {{ user.displayName }}! <button class="btn btn-primary" (click)="logout()">Logout</button> </p>
-  
+    <div class="row">
+      <div class="col-sm">
+        Hi {{ user.displayName }}!
+      </div>
+      <div class="col-sm text-right">
+        <button class="btn btn-primary" (click)="logout()">Logout</button>
+      </div>
+    </div>
+
     <app-header></app-header>
     <div class="content">
       <!-- Navegar entre as paginas sem ter que dar reload-->
@@ -15,6 +22,8 @@
 
   <!-- ng-template: html solto sem controle de logica-->
   <ng-template #showLogin>
-    <p>Please login: <button class="btn btn-primary" (click)="login()">Login with Google</button></p>    
+    <p>Please login:
+      <button class="btn btn-primary" (click)="login()">Login with Google</button>
+    </p>
   </ng-template>
 </div>
