--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,12 +3,14 @@
     as user: nomeando o resultado.
     else showLogin: caso de errado, ele faz isso. E o showLogin vai mostrar o template
    -->
+
   <div *ngIf="authService.afAuth.authState | async as user; else showLogin">
     <div class="row">
-      <div class="col-sm">
+      <div class="col">
         Hi {{ user.displayName }}!
+        <fa name="far fa-user"></fa>
       </div>
-      <div class="col-sm text-right">
+      <div class="col text-right">
         <button class="btn btn-primary" (click)="logout()">Logout</button>
       </div>
     </div>
@@ -22,8 +24,20 @@
 
   <!-- ng-template: html solto sem controle de logica-->
   <ng-template #showLogin>
-    <p>Please login:
-      <button class="btn btn-primary" (click)="login()">Login with Google</button>
-    </p>
+    <div class="text-center">
+      <form class="form-signin">
+        <img class="mb-4" src="https://getbootstrap.com/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72">
+        <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
+        <label for="inputEmail" class="sr-only">Email address</label>
+        <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required="" autofocus="">
+        <label for="inputPassword" class="sr-only">Password</label>
+        <input type="password" id="inputPassword" class="form-control" placeholder="Password" required="">
+
+        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+        <br>
+        <button class="btn btn-google" (click)="login()">Login with Google <fa name="far fa-google"></fa></button>
+        <p class="mt-5 mb-3 text-muted">© 2017-2018</p>
+      </form>
+    </div>
   </ng-template>
 </div>
