--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,11 +1,11 @@
 <header class="jumbotron p-3 mt-3">
-  <h3>Livros dos Elfos</h3>
+  <h3>Livro dos Elfos</h3>
 
   <!-- Left navbar -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-light mt-3">
-    <ul class="nav nav-pills">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <ul class="nav">
       <li class="nav-item">
-        <a routerLink="/about" class="nav-link active">Cadastrar Livros</a>
+        <a routerLink="/about" class="nav-link">Cadastrar</a>
       </li>
       <li class="nav-item">
         <a routerLink="/about" class="nav-link" id="aboutButton">Sobre</a>
@@ -13,13 +13,12 @@
     </ul>
 
     <!--Right navbar-->
-    <ul class="nav nav-pills navbar-right">
+    <ul class="nav ml-auto">
       <li class="nav-item">
-        <a routerLink="/shopping-list" class="nav-link disabled">Meu Carrinho</a>
+        <a routerLink="/shopping-list" class="nav-link disabled">Carrinho
+          <fa name="far fa-shopping-cart"></fa>
+        </a>
       </li>
     </ul>
   </nav>
-
-
-
 </header>
