--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -1,13 +1,16 @@
-<form class="navbar-form" role="search">
-  <div class="input-group">
-    <input type="text" class="form-control col-sm-3" placeholder="Pesquisar livro" [(ngModel)]="itemToAdd" name="myInput">
-    <span class="input-group-btn">
-      <button type="submit" class="btn btn-primary ml-1" (click)="addObjectToList()">Buscar</button>
-    </span>
+<form class="form-inline">
+  <div class="form-group mb-2" id="searchingBookDiv">
+    <label for="searchingBook" class="sr-only"></label>
+    <input type="text" readonly class="form-control-plaintext" id="searchingBook" value="Procurando por algum livro?">
   </div>
+  <div class="form-group mx-sm-3 mb-2">
+    <label for="myInput" class="sr-only">Book name</label>
+    <input type="text" class="form-control" [(ngModel)]="itemToAdd" name="myInput" id="myInput" placeholder="Nome do livro">
+  </div>
+  <button type="submit" class="btn btn-primary mb-2" (click)="addObjectToList()">Buscar</button>
 </form>
 
-<h5>Livros encontrados</h5>
+<h5 class="mt-3">Livros encontrados</h5>
 <ul class="list-group">
   <!-- Toda diretiva estrutural tem * -->
   <app-shopping-list-item *ngFor="let item of list | async" [shoppingItem]="item">
