--- a/src/app/shopping-list/shopping-list-item/shopping-list-item.component.html
+++ b/src/app/shopping-list/shopping-list-item/shopping-list-item.component.html
@@ -1,13 +1,11 @@
-<li class="list-group-item" 
-    *ngIf="!deleted"
-    [ngClass]="{ 'disabled' : listItem.disabled }">
+<li class="list-group-item" *ngIf="!deleted" [ngClass]="{ 'disabled' : listItem.disabled }">
   <span>{{ listItem.name }}</span>
   <span class="float-right" *ngIf="!listItem.disabled">
-    <span class="badge badge-danger"(click)="removeItem()">
+    <span class="badge badge-danger" (click)="removeItem()">
       <fa name="fas fa-times-circle"></fa>
     </span>
-      <span class="badge badge-success" (click)="crossItem(listItem)">
-        <fa name="far fa-check"></fa>
-      </span>
+    <span class="badge badge-success" (click)="crossItem(listItem)">
+      <fa name="far fa-check"></fa>
+    </span>
   </span>
 </li>
