--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,13 +5,13 @@
   <nav class="navbar navbar-expand-lg navbar-light bg-light mb-2">
     <ul class="nav">
       <li class="nav-item">
-        <a routerLink="/about" class="nav-link">Cadastrar</a>
+        <a routerLink="/shopping-store" class="nav-link">Cadastrar</a>
       </li>
       <li class="nav-item">
         <a routerLink="/about" class="nav-link" id="aboutButton">Sobre</a>
       </li>
       <li class="nav-item">
-        <a routerLink="/shopping-list" class="nav-link disabled">Meu Carrinho
+        <a routerLink="/shopping-list" class="nav-link disabled">Carrinho
           <fa name="far fa-shopping-cart"></fa>
         </a>
       </li>
@@ -26,7 +26,7 @@
   <!--Searchin form -->
   <form class="navbar-form" role="search">
     <div class="input-group">
-      <input type="text" class="form-control col-sm-3" placeholder="Pesquisar livro" [(ngModel)]="itemToAdd" name="myInput">
+      <input type="text" id="inputNameBook"class="form-control col-md-3" placeholder="Pesquisar livro por nome" [(ngModel)]="itemToAdd" name="myInput">
       <span class="input-group-btn">
         <button type="submit" class="btn btn-primary ml-1" (click)="addObjectToList()">Buscar</button>
       </span>
