--- a/src/app/shopping-list/shopping-store/shopping-store.component.html
+++ b/src/app/shopping-list/shopping-store/shopping-store.component.html
@@ -12,7 +12,11 @@
   </div>
   <div class="form-group">
     <label for="quantity">Quantidade em estoque</label>
-    <input type="text" class="form-control col-md-3" [(ngModel)]="quantity" id="quantity" name="quantity" placeholder="Ex: 10">
+    <input type="number" class="form-control col-md-3" [(ngModel)]="quantity" id="quantity" name="quantity" placeholder="Ex: 10">
+  </div>
+  <div class="form-group">
+    <label for="quantity">Preço</label>
+    <input type="number" class="form-control col-md-3" [(ngModel)]="price" id="price" name="price" placeholder="R$15,00">
   </div>
   <button type="submit" class="btn btn-primary" (click)="addBook()">Salvar</button>
 </form>
@@ -27,6 +31,7 @@
     <span>{{ book.name }}</span>
     <span>{{ book.author }}</span>
     <span>{{ book.quantity }}</span>
+    <span>{{ book.price }}</span>
     <span class="float-right">
       <span class="badge badge-danger" (click)="removeItem()">
         <fa name="fas fa-times-circle"></fa>
