--- a/src/app/shopping-list/shopping-store/shopping-store.component.html
+++ b/src/app/shopping-list/shopping-store/shopping-store.component.html
@@ -18,7 +18,7 @@
     <label for="quantity">Preço</label>
     <input type="number" class="form-control col-md-3" [(ngModel)]="price" id="price" name="price" placeholder="R$15,00">
   </div>
-  <button type="submit" class="btn btn-primary" (click)="addBook()">Salvar</button>
+  <button type="submit" class="btn btn-primary" (click)="add()">Salvar</button>
 </form>
 <hr>
 <p>
@@ -33,7 +33,7 @@
     <span>{{ book.quantity }}</span>
     <span>{{ book.price }}</span>
     <span class="float-right">
-      <span class="badge badge-danger" (click)="removeItem()">
+      <span class="badge badge-danger" (click)="delete(book)">
         <fa name="fas fa-times-circle"></fa>
       </span>
     </span>
