Salvando coisas de casa

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,3 +1,18 @@
 <h3>
   Sobre
 </h3>
+
+<div class="row">
+  <div class="col-lg-12">
+    <img id="forestElf" src="assets/images/forest_elf.jpg" class="rounded mx-auto d-block">
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-lg-4 offset-lg-4 center-block text-center">
+    <p>
+      A Livraria dos Elfos é especializada em livros de fantasia, aventuras e RPG. 
+      Nosso acervo abrange desde os livros clássicos como Senhor dos Anéis, O Hobbit, 
+    </p>
+  </div>
+</div>
