--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,7 +11,7 @@
         <fa name="far fa-user"></fa>
       </div>
       <div class="col-4 text-right">
-        <button class="btn btn-primary" (click)="logout()">Logout</button>
+        <button class="btn btn-outline-info" (click)="logout()">Logout</button>
       </div>
     </div>
 
