--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -1,14 +1,34 @@
-<form class="form-inline">  
-  <div class="form-group mx-sm-3 mb-2">
-    <label for="myInput" class="sr-only">Book name</label>
-    <input type="text" class="form-control" [(ngModel)]="itemToAdd" name="myInput" id="myInput" placeholder="Nome do livro">
+<h5 class="mt-3">Livros disponíveis</h5>
+<div class="row">
+  <div class="col-lg-6 offset-lg-3">
+    <div class="table-responsive">
+      <table class="table table-hover">
+        <thead class="thead-light">
+          <tr>
+            <th scope="col">Nome</th>
+            <th scope="col">Autor(a)</th>
+            <th scope="col">Preço</th>
+            <th scope="col"></th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th scope="row">Eragon</th>
+            <td>Christopher</td>
+            <td>R$15,00</td>
+            <td>
+              <button class="btn btn-danger btn-block" (click)="logout()">Comprar</button>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
   </div>
-  <button type="submit" class="btn btn-primary mb-2" (click)="addObjectToList()">Buscar</button>
-</form>
-
-<h5 class="mt-3">Livros encontrados</h5>
-<ul class="list-group">
-  <!-- Toda diretiva estrutural tem * -->
+</div>
+<!-- Toda diretiva estrutural tem * -->
+<!-- OLD WAY 
+<ul class="list-group">  
   <app-shopping-list-item *ngFor="let item of list | async" [shoppingItem]="item">
   </app-shopping-list-item>
 </ul>
+-->
