--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -1,4 +1,4 @@
-<h5 class="mt-3">Livros disponíveis</h5>
+<h3 class="mt-3">Livros disponíveis</h3>
 <div class="row">
   <div class="col-lg-6 offset-lg-3">
     <div class="table-responsive">
@@ -12,19 +12,14 @@
           </tr>
         </thead>
         <tbody>
-          <tr>
-            <th scope="row">Eragon</th>
-            <td>Christopher</td>
-            <td>R$15,00</td>
-            <td>
-              <button class="btn btn-danger btn-block" (click)="logout()">Comprar</button>
-            </td>
-          </tr>
+          <app-shopping-list-item *ngFor="let item of list | async" [shoppingBook]="item">
+          </app-shopping-list-item>          
         </tbody>
       </table>
     </div>
   </div>
 </div>
+
 <!-- Toda diretiva estrutural tem * -->
 <!-- OLD WAY 
 <ul class="list-group">  
