--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -20,7 +20,7 @@
         </a>
       </li>
       <li class="nav-item">
-        <a routerLink="/shopping-cart" class="nav-link btn-info">Carrinho
+        <a routerLink="/shopping-cart" class="nav-link btn-success">Carrinho
           <fa name="far fa-shopping-cart"></fa>
         </a>
       </li>
