--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -1,4 +1,4 @@
-<h5 class="mt-3">Livros disponíveis</h5>
+<h3 class="mt-3">Livros disponíveis</h3>
 <div class="row">
   <div class="col-lg-6 offset-lg-3">
     <div class="table-responsive">
@@ -12,19 +12,24 @@
           </tr>
         </thead>
         <tbody>
-          <tr>
-            <th scope="row">Eragon</th>
-            <td>Christopher</td>
-            <td>R$15,00</td>
+          <!--Ocorre o erro: Can't bind to 'bookRow' since it isn't a known property of 'tr'.
+          <tr *ngFor="let book of booksList | async" app-shopping-list-item [bookRow]="book" [mode]="mode">
+          </tr>-->
+          <tr *ngFor="let book of booksList | async">
+            <td>{{ book.name }}</td>
+            <td>{{ book.author }}</td>
+            <td>{{ book.price }}</td>
             <td>
-              <button class="btn btn-danger btn-block" (click)="logout()">Comprar</button>
+              <button class="btn btn-danger btn-block" (click)="addToCart(book)">Comprar</button>
             </td>
           </tr>
+
         </tbody>
       </table>
     </div>
   </div>
 </div>
+
 <!-- Toda diretiva estrutural tem * -->
 <!-- OLD WAY 
 <ul class="list-group">  
