improving table of books / store and list

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -10,7 +10,7 @@
         </a>
       </li>
       <li class="nav-item">
-        <a routerLink="/shopping-store" class="nav-link btn-info">Cadastrar
+        <a routerLink="/shopping-store" class="nav-link btn-info">Estoque
           <fa name="far fa-pencil"></fa>
         </a>
       </li>
