--- a/src/app/shopping-list/shopping-cart/shopping-cart.component.html
+++ b/src/app/shopping-list/shopping-cart/shopping-cart.component.html
@@ -1,4 +1,4 @@
-<h3>Livros no Carrinho</h3>
+<h3 class="mt-2">Livros no Carrinho</h3>
 <div class="row">  
   <div class="col-lg-6 offset-lg-3">
     <div class="table-responsive">
@@ -31,5 +31,11 @@
         </tbody>
       </table>
     </div>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-lg-6 offset-lg-3">
+    
   </div>
 </div>
