--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -1,4 +1,4 @@
-<h3 class="mt-3">Livros disponíveis</h3>
+<h3 class="mt-2">Livros disponíveis</h3>
 <div class="row">
   <div class="col-lg-6 offset-lg-3">
     <div class="table-responsive">
@@ -19,7 +19,11 @@
             <td>{{ book.name }}</td>
             <td>{{ book.author }}</td>
             <td>{{ book.price }}</td>
-            <td>
+            <td *ngIf="book.quantity == 0">
+              <span>Produto esgotado
+              </span>
+            </td>
+            <td *ngIf="book.quantity != 0">
               <button class="btn btn-danger btn-block" (click)="addToCart(book)">Comprar</button>
             </td>
           </tr>
