--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -9,10 +9,11 @@
 </div>
 
 <div class="row">
-  <div class="col-lg-4 offset-lg-4 center-block text-center">
+  <div class="col-lg-6 offset-lg-3 center-block text-center">
     <p>
       A Livraria dos Elfos é especializada em livros de fantasia, aventuras e RPG. 
-      Nosso acervo abrange desde os livros clássicos como Senhor dos Anéis, O Hobbit, 
+      Nosso acervo abrange desde os livros clássicos como Senhor dos Anéis, Eragon, O Hobbit,
+      até os mais atuais e variados livros de RPG.
     </p>
   </div>
 </div>
