--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,16 +26,20 @@
   <ng-template #showLogin>
     <div class="text-center">
       <form class="form-signin">
-        <img class="mb-4" src="https://getbootstrap.com/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72">
-        <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
+        <img id="logoSignIn" src="assets/images/logo_livraria.PNG" class="rounded">
+
+        <!--
         <label for="inputEmail" class="sr-only">Email address</label>
         <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required="" autofocus="">
         <label for="inputPassword" class="sr-only">Password</label>
         <input type="password" id="inputPassword" class="form-control" placeholder="Password" required="">
 
         <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+        -->
         <br>
-        <button class="btn btn-google" (click)="login()">Login with Google <fa name="far fa-google"></fa></button>
+        <button class="btn btn-google" (click)="login()">Login with Google
+          <fa name="far fa-google"></fa>
+        </button>
         <p class="mt-5 mb-3 text-muted">© 2018</p>
       </form>
     </div>
