Cleaning up the code

--- a/src/app/shopping-list/shopping-cart/shopping-cart.component.html
+++ b/src/app/shopping-list/shopping-cart/shopping-cart.component.html
@@ -1,8 +1,8 @@
 <h3 class="mt-2">Livros no Carrinho</h3>
-<div class="row">  
+<div class="row">
   <div class="col-lg-6 offset-lg-3">
     <div class="table-responsive">
-      <table class="table table-hover">
+      <table class="table table-hover" id="cartTable">
         <thead class="thead-light">
           <tr>
             <th scope="col">Nome</th>
@@ -27,15 +27,8 @@
               </button>
             </td>
           </tr>
-
         </tbody>
       </table>
     </div>
-  </div>
-</div>
-
-<div class="row">
-  <div class="col-lg-6 offset-lg-3">
-    
   </div>
 </div>
